Properly linking OpenUSD libraries and required dependencies

--- a/CMakeLists.txt
+++ b/CMakeLists.txt
@@ -6,7 +6,6 @@ set(CMAKE_CXX_STANDARD_REQUIRED ON)
 set(CMAKE_CXX_EXTENSIONS OFF)
 
 list(APPEND CMAKE_MODULE_PATH "${CMAKE_CURRENT_SOURCE_DIR}/src/cmake")
-message(STATUS "Requested C++ Standard: ${CMAKE_CXX_STANDARD}")
 
 set (YBI_DEPENDENCIES "")
 set (YBI_INCLUDE_DIRECTORIES "")
@@ -19,19 +18,21 @@ set (YBI_COMPILE_DEFINITIONS
 # Add third party libraries
 add_subdirectory(src/third_party)
 
-# TODO: what if openusd isn't found?
-list (APPEND YBI_DEPENDENCIES ${OPENUSD_LIBRARIES})
-list (APPEND YBI_THIRD_PARTY_INCLUDE_DIRECTORIES ${OPENUSD_INCLUDE_DIRS})
+if (WITH_USD)
+    list (APPEND YBI_DEPENDENCIES ${OPENUSD_LIBRARIES})
+    list (APPEND YBI_THIRD_PARTY_INCLUDE_DIRECTORIES ${OPENUSD_INCLUDE_DIRS})
+endif()
 
-# Platform Specific
+# OS Specific
 if (WIN32)
     list (APPEND YBI_COMPILE_DEFINITIONS "NOMINMAX" "WIN32_LEAN_AND_MEAN")
 endif()
-# Platform Specific End
+# OS Specific End
 
 include(CheckLanguage)
 check_language(CUDA)
 
+# Hardware Specific
 # TODO: check_language for CUDA only works on MSVC?
 if (CMAKE_CUDA_COMPILER)
     find_package(CUDAToolkit REQUIRED)
@@ -46,10 +47,11 @@ if (CMAKE_CUDA_COMPILER)
         list (APPEND YBI_INCLUDE_DIRECTORIES "${OPTIX_INCLUDE_DIR}")
     endif()
 endif()
+# Hardware Specific End
 
 add_executable(yeoubi ${CMAKE_CURRENT_SOURCE_DIR}/src/test.cpp)
 
-target_link_libraries(yeoubi PRIVATE ${YBI_DEPENDENCIES})
 target_compile_definitions(yeoubi PRIVATE ${YBI_COMPILE_DEFINITIONS})
 target_include_directories(yeoubi PRIVATE ${YBI_INCLUDE_DIRECTORIES})
 target_include_directories(yeoubi SYSTEM PRIVATE ${YBI_THIRD_PARTY_INCLUDE_DIRECTORIES})
+target_link_libraries(yeoubi PRIVATE ${YBI_DEPENDENCIES})
