--- a/.gitmodules
+++ b/.gitmodules
@@ -1,3 +1,6 @@
 [submodule "src/third_party/OpenUSD"]
 	path = src/third_party/OpenUSD
 	url = https://github.com/PixarAnimationStudios/OpenUSD.git
+[submodule "src/third_party/meshoptimizer"]
+	path = src/third_party/meshoptimizer
+	url = https://github.com/zeux/meshoptimizer.git
