Mesh optimizer successfully linked

--- a/CMakeLists.txt
+++ b/CMakeLists.txt
@@ -44,6 +44,11 @@ if (WITH_USD)
     # install(FILES ${OPENUSD_LIBRARIES} DESTINATION ${CMAKE_INSTALL_PREFIX})
 endif()
 
+if (MESHOPTIMIZER_FOUND)
+    list (APPEND YBI_DEPENDENCIES ${MESHOPTIMIZER_LIBRARY})
+    list (APPEND YBI_THIRD_PARTY_INCLUDE_DIRECTORIES ${MESHOPTIMIZER_INCLUDE_DIR})
+endif()
+
 # OS Specific
 if (WIN32)
     list (APPEND YBI_COMPILE_DEFINITIONS "NOMINMAX" "WIN32_LEAN_AND_MEAN")
